2008-12-01  Alejandro Pinheiro  <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c:
	(_on_dialog_response), (_save_current_selection),
	(_restore_current_selection), (_clean_current_selection),
	(hildon_picker_dialog_finalize), (hildon_picker_dialog_show)
	Defined new functions in order to save the current internal selector
	selection previous open the dialog, in case that the use cancel the
	interaction, so the widget restores the previous selection.

	Fixes: NB#92032

	(requires_done_button): use of macro HILDON_TOUCH_SELECTOR_HEIGHT

2008-11-28  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-button.c: Add a reference to the button examples in
	hildon-button-example.c

	* examples/hildon-button-example.c: Added examples of the most
	common button layouts.

2008-11-28  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c (hildon_app_menu_show)
	(hildon_app_menu_class_init): Don't show the menu if it's empty.

	Fixes: NB#93890 (Empty HildonAppMenu is pop-up)

2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-dialog.c:
	(hildon_picker_dialog_init): Initialize	the signal id for
	HildonTouchSelector::columns-changed.
	(+on_selector_columns_changed): Set up the interaction mode everytime a
	column is added or removed from the HildonTouchSelector.
	(_hildon_picker_dialog_set_selector): Connect to
	HildonTouchSelector::columns-changed and keep track of it.

	Make sure to update the interaction mode of the dialog everytime a
	column is added	or removed in the HildonTouchSelector.

	Fixes: NB#93228 (Done button is not shown always in listpicker)

2008-11-27  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector.c: (hildon_touch_selector_class_init): Add
	a new ::columns-changed signal.
	(hildon_touch_selector_append_column): Emit ::columns-changed.
	(hildon_touch_selector_remove_column): Emit ::columns-changed.

	Add a ::columns-changed signal, emitted when the number of columns in a
	HildonTouchSelector changes.
